# object_oriented_c

./: .gitignore  README.md
1_modulized_c_and_obj_oriented/: CMakeLists.txt  main.c  module.h  regarcy_stack.c  regarcy_stack.h  step1.c  step1.h  step2.c  step2.h
A_01_Singleton_Pattern/: CMakeLists.txt
DESIGN_PATTERN/: CMakeLists.txt  compile_option.h  decorator.c  main.c  singleton.c
ch4_designPattern/cd03/src/: CMakeLists.txt  main.c
ch4_designPattern/cd3_statePattern_let/: CMakeLists.txt  main.c  self_state.c  self_state.h  state_pattern.c  state_pattern.h
ch4_designPattern/chainOfResponsibility01_let/: CMakeLists.txt  main.c  validate_diff_enhance.c  validate_diff_enhance.h  validate_diff_enhanced_stable.c  validate_diff_enhanced_stable.h  validator.c  validator.h
ch4_designPattern/template01/: CMakeLists.txt  main.c  test.txt
ch4_designPattern/template04/src/: CMakeLists.txt  main.c
ch4_designPattern/template05/src/: CMakeLists.txt  main.c
ch4_designPattern/template05_let/src/: CMakeLists.txt  file_reader.c  main.c
ch4_designPattern/template05_let/src/myself/: db_read.c  db_read.h  file_read.c  file_read.h
ch4_designPattern/template08/src/: CMakeLists.txt  buffer.h  main.c
ch4_designPattern/template08/src/myself/: buf_control.c  buf_control.h  db_read.c  db_read.h  file_read.c  file_read.h
ch4_designPattern/template09/src/: CMakeLists.txt  buffer.c  main.c
